Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Apr-2010 Jean-Marie Simonet
$ Standardized some obsolete KEYS
$ Consolidated/Standardized/created some keys/inis
+$ Adding missing .sys.ini file

11-Apr-2010 Hannes Papenberg
# Fixing admin template parameters - Thanks Jonnathan S. Lima
# Moved stick() function from BannersModelBanners to BannersModelBanner
# Removed obsolete functions from BannersModelBanners
# Improved routing code of ContentHelperRoute

11-Apr-2010 Jean-Marie Simonet
# Fixed a typo in en-GB.ini in backend.
#$ Refactoring ini/keys in libraries J/database
$ Correcting —again— non standards keys
# Fixing bug in controlleradmin.php
$ Corrected —again- keys changed by #15980
$ Corrected com_banners clients keys
$ Corrected more ini strings

10-Apr-2010 Hannes Papenberg
^ Created JCategories to handle all presentation-logic for categories
# Rewrite of com_content
# Rewrite of com_contact
# Rewrite of com_newsfeeds
# Rewrite of com_weblinks
^ Changing all core files to use semantic output
+ Added mod_articles_categories
^ Changed com_content frontpage view to featured view
^ Changed the routing of all core components
# Fixed search plugins to use the new routing system
# Fixed mod_menu
# Fixed bug in JFormField
# Fixed categories FormField
# Fixed componentlayout FormField
+ Added stripImages function to JFilterOutput
^ Changed JHTMLString::truncate to close all open HTML tags of a truncated string
+ Introduced JControllerAdmin
+ Introdcued JModelAdmin
# Fixed ordering, delete, publish, checkin, checkout in com_banners, com_contact, com_content, com_languages, com_newsfeeds, com_messages, com_modules, com_plugins, com_weblinks
# Partially fixed ordering, delete, publish, checkin, checkout in com_categories, com_menus