@@ -1,0 +1,19 @@
+; $Id: en-GB.mod_articles_categories.ini 14931 2010-02-19 16:07:48Z infograf768 $
+; Joomla! Project
+; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8 - No BOM
+
+MOD_ARTICLES_CATEGORIES="Articles Categories"
+MOD_ARTICLES_CATEGORIES_XML_DESCRIPTION="This module displays a list of categories from one parent category."
+
+MOD_ARTICLES_CATEGORIES_FIELD_COUNT_DESC="Enter here the number of first level children categories to display. Default is '0' and will display all."
+MOD_ARTICLES_CATEGORIES_FIELD_COUNT_LABEL="Number of first level children categories"
+MOD_ARTICLES_CATEGORIES_FIELD_MAXLEVEL_DESC="Enter here the maximum level depth for each children category. Default is '0' and will display all."
+MOD_ARTICLES_CATEGORIES_FIELD_MAXLEVEL_LABEL="Maximum level depth"
+MOD_ARTICLES_CATEGORIES_FIELD_PARENT_DESC="Choose a parent category"
+MOD_ARTICLES_CATEGORIES_FIELD_PARENT_LABEL="Parent category"
+MOD_ARTICLES_CATEGORIES_FIELD_SHOW_CHILDREN_DESC="Displays or not children categories"
+MOD_ARTICLES_CATEGORIES_FIELD_SHOW_CHILDREN_LABEL="Children categories"
+MOD_ARTICLES_CATEGORIES_FIELD_SHOW_DESCRIPTION_DESC="Displays or not categories descriptions"
+MOD_ARTICLES_CATEGORIES_FIELD_SHOW_DESCRIPTION_LABEL="Categories descriptions"
