@@ -1,0 +1,8 @@
+; $Id: en-GB.mod_articles_categories.sys.ini 14931 2010-02-19 16:07:48Z infograf768 $
+; Joomla! Project
+; Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.
+; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
+; Note : All ini files need to be saved as UTF-8 - No BOM
+
+MOD_ARTICLES_CATEGORIES="Articles Categories"
+MOD_ARTICLES_CATEGORIES_XML_DESCRIPTION="This module displays a list of categories from one parent category."
