@@ -1,106 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <extension
-    type="module"
-    version="1.6.0"
-    client="site"
-    method="upgrade">
-    <name>mod_articles_categories</name>
-    <author>Joomla! Project</author>
-    <creationDate>February 2010</creationDate>
-    <copyright>Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.</copyright>
-    <license>GNU General Public License version 2 or later; see LICENSE.txt</license>
-    <authorEmail>admin@joomla.org</authorEmail>
-    <authorUrl>www.joomla.org</authorUrl>
-    <version>1.6.0</version>
-    <description>MOD_ARTICLES_CATEGORIES_XML_DESCRIPTION</description>
-    <files>
-        <filename
-            module="mod_articles_categories">mod_articles_categories.php</filename>
-        <folder>tmpl</folder>
-        <filename>helper.php</filename>
-        <filename>index.html</filename>
-        <filename>mod_articles_categories.xml</filename>
-    </files>
-    <languages>
-        <language
-            tag="en-GB">en-GB.mod_articles_categories.ini</language>
-    </languages>
-    <fields>
-    	<field
-    		name="parent"
-    		type="category"
-    		extension="com_content"
-    		published=""
-    		label="MOD_ARTICLES_CATEGORIES_FIELD_PARENT_LABEL"
-    		description="MOD_ARTICLES_CATEGORIES_FIELD_PARENT_DESC"/>
-        <field
-        	name="show_description"
-        	type="radio"
-        	default="0"
-        	label="MOD_ARTICLES_CATEGORIES_FIELD_SHOW_DESCRIPTION_LABEL"
-        	description="MOD_ARTICLES_CATEGORIES_FIELD_SHOW_DESCRIPTION_DESC">
-            <option
-            	value="0">JNO</option>
-            <option
-            	 value="1">JYES</option>
-        </field>
-        <field
-        	name="show_children"
-        	type="radio"
-        	default="0"
-        	label="MOD_ARTICLES_CATEGORIES_FIELD_SHOW_CHILDREN_LABEL"
-        	description="MOD_ARTICLES_CATEGORIES_FIELD_SHOW_CHILDREN_DESC">
-            <option
-            	value="0">JNO</option>
-            <option
-            	 value="1">JYES</option>
-        </field>
-        <field
-        	name="maxlevel"
-        	type="integer"
-        	default="0"
-        	first="0"
-        	last="100"
-        	label="MOD_ARTICLES_CATEGORIES_FIELD_MAXLEVEL_LABEL"
-        	description="MOD_ARTICLES_CATEGORIES_FIELD_MAXLEVEL_DESC"/>
-        <field
-        	name="count"
-        	type="integer"
-        	default="0"
-        	first="0"
-        	last="100"
-        	label="MOD_ARTICLES_CATEGORIES_FIELD_COUNT_LABEL"
-        	description="MOD_ARTICLES_CATEGORIES_FIELD_COUNT_DESC"/>
-    </fields>
-    <fields
-        group="advanced">
-        <field
-            name="layout"
-            type="modulelayout"
-            label="JFIELD_ALT_LAYOUT_LABEL"
-            description="JFIELD_ALT_MODULE_LAYOUT_DESC" />
-        <field
-            name="moduleclass_sfx"
-            type="text"
-            default=""
-            label="MODULES_FIELD_MODULECLASS_SFX_LABEL"
-            description="MODULES_FIELD_MODULECLASS_SFX_DESC" />
-        <field
-            name="cache"
-            type="list"
-            default="1"
-            label="MODULES_FIELD_CACHING_LABEL"
-            description="MODULES_FIELD_CACHING_DESC">
-            <option
-                value="1">USE_GLOBAL</option>
-            <option
-                value="0">MODULES_FIELD_VALUE_NOCACHING</option>
-        </field>
-        <field
-            name="cache_time"
-            type="text"
-            default="900"
-            label="MODULES_FIELD_CACHE_TIME_LABEL"
-            description="MODULES_FIELD_CACHE_TIME_DESC" />
-    </fields>
+	type="module" version="1.6.0" client="site" method="upgrade">
+	<name>mod_articles_categories</name>
+	<author>Joomla! Project</author>
+	<creationDate>February 2010</creationDate>
+	<copyright>Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.</copyright>
+	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
+	<authorEmail>admin@joomla.org</authorEmail>
+	<authorUrl>www.joomla.org</authorUrl>
+	<version>1.6.0</version>
+	<description>MOD_ARTICLES_CATEGORIES_XML_DESCRIPTION</description>
+	<files>
+		<filename
+			module="mod_articles_categories">mod_articles_categories.php</filename>
+		<folder>tmpl</folder>
+		<filename>helper.php</filename>
+		<filename>index.html</filename>
+		<filename>mod_articles_categories.xml</filename>
+	</files>
+	<languages>
+		<language tag="en-GB">en-GB.mod_articles_categories.ini</language>
+	</languages>
+	<config>
+	<fields name="params">
+		<fieldset name="basic">
+			<field
+				name="parent"
+				type="category"
+				extension="com_content"
+				published=""
+				label="MOD_ARTICLES_CATEGORIES_FIELD_PARENT_LABEL"
+				description="MOD_ARTICLES_CATEGORIES_FIELD_PARENT_DESC"/>
+			<field
+				name="show_description"
+				type="radio"
+				default="0"
+				label="MOD_ARTICLES_CATEGORIES_FIELD_SHOW_DESCRIPTION_LABEL"
+				description="MOD_ARTICLES_CATEGORIES_FIELD_SHOW_DESCRIPTION_DESC">
+				<option
+					value="0">JNO</option>
+				<option
+					 value="1">JYES</option>
+			</field>
+			<field
+				name="show_children"
+				type="radio"
+				default="0"
+				label="MOD_ARTICLES_CATEGORIES_FIELD_SHOW_CHILDREN_LABEL"
+				description="MOD_ARTICLES_CATEGORIES_FIELD_SHOW_CHILDREN_DESC">
+				<option
+					value="0">JNO</option>
+				<option
+					 value="1">JYES</option>
+			</field>
+			<field
+				name="maxlevel"
+				type="text"
+				default="0"
+				first="0"
+				last="100"
+				label="MOD_ARTICLES_CATEGORIES_FIELD_MAXLEVEL_LABEL"
+				description="MOD_ARTICLES_CATEGORIES_FIELD_MAXLEVEL_DESC"/>
+			<field
+				name="count"
+				type="text"
+				default="0"
+				first="0"
+				last="100"
+				label="MOD_ARTICLES_CATEGORIES_FIELD_COUNT_LABEL"
+				description="MOD_ARTICLES_CATEGORIES_FIELD_COUNT_DESC"/>
+		</fieldset>
+		<fieldset name="advanced">
+			<field name="layout" type="modulelayout"
+				label="JFIELD_ALT_LAYOUT_LABEL" description="JFIELD_ALT_MODULE_LAYOUT_DESC" />
+
+			<field name="moduleclass_sfx" type="text" default=""
+				label="COM_MODULES_FIELD_MODULECLASS_SFX_LABEL"
+				description="COM_MODULES_FIELD_MODULECLASS_SFX_DESC" />
+
+			<field name="owncache" type="list" default="1"
+				label="COM_MODULES_FIELD_CACHING_LABEL" description="COM_MODULES_FIELD_CACHING_DESC" >
+				<option value="1">JGLOBAL_USE_GLOBAL</option>
+				<option value="0">COM_MODULES_FIELD_VALUE_NOCACHING
+				</option>
+			</field>
+
+			<field name="cache_time" type="text" default="900"
+				label="COM_MODULES_FIELD_CACHE_TIME_LABEL" description="COM_MODULES_FIELD_CACHE_TIME_DESC" />
+		</fieldset>
+	</fields>
+	</config>
 </extension>
